app/src/main/assets/proof.css
img {
  max-width: 100%;
  height: auto;
}

a{
  color: #0072c6;
}
html, body {
    max-width: 100%;
    overflow-x: hidden;
    color: #333333;
}

body{
  line-height: 1.3;
  font-size: 1.1em;
  font-family: 'Open Sans', sans-serif;
}

p, h1, h2, h3, h4, h5, h6{
  margin: 0.6em 5vw 0.6em 5vw;
}

h1, h2, h3, h4, h5, h6 {
	background: none;
	font-weight: normal;
	overflow: hidden;
	padding-top: 1em;
	padding-bottom: .4em;
  font-family: 'Libre Baskerville', serif;
}
h2, h3, h4, h5, h6{
	border-top: 1px solid #E0E0E0;
}
h2{
  font-size: 1.6em;
}

